--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         </div>
       </nav>
 
+      <div class="d-flex px-3 py-4 flex-wrap gap-4 justify-content-center">
+
+        <div class="card" style="width: 16rem;">
+          <img src="./poster.png" class="card-img-top" style="height: 14rem;" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bode Elétrico</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-info text-light">Detalhes </a>
+          </div>
+        </div>
+
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
