--- a/addEventForm.html
+++ b/addEventForm.html
@@ -6,8 +6,9 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
   </head>
-  <body style="background: #F0F0F0;">
+  <body class="d-flex justify-content-center flex-column align-items-center" style="background: #F0F0F0;">
     <nav class="navbar navbar-expand-lg bg-adm-nav shadow vw-100">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><h1 class="display-1 fw-medium text-light">Cuida!<span class="h1 fst-italic">adm</span></h1></a>
@@ -30,31 +31,35 @@
         </div>
       </nav>
 
-      <div class="d-flex px-5 py-4 flex-wrap gap-4 justify-content-start">
-				<h2 class="display-2 ms-5 fw-medium text-light fst-italic" style="letter-spacing: -4px; text-shadow: -4px 4px 0px rgba(0, 0, 0, 0.20); -webkit-text-stroke-width: 1px;-webkit-text-stroke-color: rgba(0, 0, 0, 0.08);"> Seus Eventos: </h2>
+      <form action="" class="w-50 text-tertiary d-flex flex-column align-items-center">
+				<h2 class="display-2 fw-medium text-light" style="text-shadow: -4px 4px 0px rgba(0, 0, 0, 0.20); -webkit-text-stroke-width: 1px;-webkit-text-stroke-color: rgba(0, 0, 0, 0.08);"> Crie seu evento </h2>
+        
 
-        <table class="table table-bordered text-light"> 
-          <a href="#"><thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Nome</th>
-              <th scope="col">Cidade</th>
-              <th scope="col">Inscritos</th>
-              <th scope="col">Detalhes</th>
-            </tr>
-          </thead></a>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Bode Elétrico</td>
-              <td>Parelhas</td>
-              <td>100000</td>
-              <td><a href="#">detalhes</a></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="inputGroup-sizing-default">Nome</span>
+          <input type="text" class="form-control" placeholder="Nome do evento" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text">Descrição</span>
+          <textarea class="form-control" aria-label="With textarea"></textarea>
+        </div>
+        <div class="input-group mb-3">
+          <label class="input-group-text" for="inputGroupSelect01">Categoria</label>
+          <select class="form-select" id="inputGroupSelect01">
+            <option selected>Escolha...</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        </div>        
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="inputGroup-sizing-default">Data</span>
+          <input type="text" class="form-control" placeholder="xx/xx/xxxx" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <button type="submit" class="btn btn-primary">Criar</button>
 
-      </div>
+      </form>
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
