--- a/index.html
+++ b/index.html
@@ -42,6 +42,80 @@
         </div>
 
       </div>
+
+      <div class="vw-100 vh-100 position-fixed top-0 start-0" data-bs-toggle="modal" data-bs-target="#loginModal">
+      </div>
+
+      <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content p-4">
+                <div class="modal-header text-center">
+                    <h2 class="modal-title w-100">Login</h2>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            <div class="input-group">
+                                <span class="input-group-text">@</span>
+                                <input type="text" class="form-control" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Senha</label>
+                            <div class="input-group">
+                                <span class="input-group-text">@</span>
+                                <input type="password" class="form-control" placeholder="Password">
+                            </div>
+                        </div>
+                        <a class="mb-3" data-bs-toggle="modal" data-bs-target="#signInModal">Registrar</a>
+                        <button type="submit" class="btn btn-primary w-100">Entrar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+      </div>
+      <div class="modal fade" id="signInModal" tabindex="1" aria-labelledby="signInModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content p-2">
+                <div class="modal-header text-center">
+                    <h2 class="modal-title w-100">Registre-se</h2>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            <div class="input-group">
+                                <span class="input-group-text">@</span>
+                                <input type="text" class="form-control" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Senha</label>
+                            <div class="input-group">
+                                <span class="input-group-text">@</span>
+                                <input type="password" class="form-control" placeholder="Password">
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Nome</label>
+                            <div class="input-group">
+                                <span class="input-group-text">@</span>
+                                <input type="text" class="form-control" placeholder="Nome">
+                            </div>
+                        </div>
+                        <select class="form-select mb-3" aria-label="Default select example">
+                          <option selected hidden>Qual seu objetivo?</option>
+                          <option value="usuario">Participar de eventos</option>
+                          <option value="admin">Criar eventos</option>
+                        </select>
+                        <button type="submit" class="btn btn-primary w-100">Entrar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+      </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
